[gd_scene load_steps=3 format=3 uid="uid://h1dwtd6v41u2"]

[ext_resource type="Texture2D" uid="uid://nbtqjafibfy6" path="res://assets/shop/iPhone 14 & 15 Pro - 1.png" id="1_6aaii"]
[ext_resource type="Script" uid="uid://c8lm4e72484af" path="res://scripts/girl_dressing_room.gd" id="1_lyotb"]

[node name="Girl Dressing Room" type="Node2D"]
script = ExtResource("1_lyotb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_6aaii")

[node name="TextureButton(GoToBoy)" type="TextureButton" parent="."]
offset_left = 337.0
offset_top = -916.0
offset_right = 377.0
offset_bottom = -876.0
scale = Vector2(3.24309, 3.14133)
metadata/_edit_use_anchors_ = true

[node name="TextureButton(Customise)" type="TextureButton" parent="."]
offset_left = -185.0
offset_top = 792.0
offset_right = -145.0
offset_bottom = 832.0
scale = Vector2(11.1559, 2.9507)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="backButton" type="TextureButton" parent="."]
offset_left = -491.0
offset_top = -894.0
offset_right = -451.0
offset_bottom = -854.0
scale = Vector2(3.31045, 2.81738)

[connection signal="pressed" from="TextureButton(GoToBoy)" to="." method="_on_texture_button_go_to_boy_pressed"]
[connection signal="pressed" from="TextureButton(Customise)" to="." method="_on_texture_button_customise_pressed"]
[connection signal="pressed" from="backButton" to="." method="_on_back_button_pressed"]
